fixed about html, more tweaks and code clean up. note on about.html: no idea why it the 'align: "right"' is red, without it the slideshow breaks. with it, the code says its wrong but it works exactly how i need it to.

--- a/pages.css
+++ b/pages.css
@@ -134,9 +134,6 @@ h2, h3{
   max-width: 300px; 
   margin: auto; 
   overflow: hidden; 
-  text-align: right;
-  align-self: right;
-
 } 
 
 #img1_1{
